--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="uno">
 
-<h1 class="studies">Mis estudios </h1>
+<h1 class="studies">Mis estudios en 2 escuelas </h1>
 
 <p class="boton"><a href="estudios.html">CLICK AQUÍ</a></p>
 
